# parlib

./: .clang-format  .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  flat_matrix_generator.h  matrix_generator.h  matrix_multiplication_cpu.h  matrix_multiplication_gpu.h
apps/client/: CMakeLists.txt  hello.cpp  matrix_mul_gpu.cpp
apps/matrix_mul/: matrix_multiplication_cpu.cpp  matrix_multiplication_cpu.h  matrix_multiplication_gpu.cpp  matrix_multiplication_gpu.h  rand_matrix_generator.cpp  rand_matrix_generator.h
cmake/: FindTBB.cmake
cpu_par/: CMakeLists.txt  task.h  task_runner.h  thread_pool.cpp  thread_pool.h
gpu/: CMakeLists.txt  gpu_task_manager.cu  gpu_task_manager.cuh
gpu/app/: matrix_multiplication_wrap.cu  matrix_multiplication_wrap.cuh
gpu/data_collections/: device_buffer.cuh
gpu/data_collections/device_data_collections/: matrix_mul_device_task_data.cu  matrix_mul_device_task_data.cuh
gpu/data_collections/host_data_collections/: matrix_mul_host_task_data.cuh
gpu/kernel_func/: function_ptrs.cuh
gpu/util/: cuda_check.cuh
gpu_par/: CMakeLists.txt  gpu_task_manager.cu  gpu_task_manager.cuh
gpu_par/app/: matrix_multiplication_wrap.cu
gpu_par/data_collections/: device_buffer.cuh  device_task_data.cuh  host_buffer.cuh  host_task_data.cuh
gpu_par/data_collections/device_data_collections/: matrix_mul_device_task_data.cu  matrix_mul_device_task_data.cuh
gpu_par/data_collections/host_data_collections/: matrix_mul_host_task_data.cuh
gpu_par/kernel/: function_ptrs.cuh
gpu_par/kernel/matrix_mul/: matrix_multiplication_wrap.cu  matrix_multiplication_wrap.cuh
gpu_par/kernel_func/: function_ptrs.cuh
gpu_par/util/: cuda_check.cuh  gpu_task_manager.cu  gpu_task_manager.cuh
miniclean/: CMakeLists.txt  flat_matrix_generator.h  matrix_generator.h  matrix_multiplication_cpu.h  matrix_multiplication_gpu.h
miniclean/apps/: CMakeLists.txt  hello.cpp  hello_gpu.cpp
multithreading/: CMakeLists.txt  task.h  task_runner.h  thread_pool.cpp  thread_pool.h
